src/request/export/Export.css
ul.nq-list li {
    width: auto;
    height: auto;
    display: flex;
    position: relative;
    padding-left: 2rem;
    margin-bottom: 3rem;
    min-height: 5rem;
    align-items: center;
}

ul.nq-list li > .nq-icon {
    position: absolute;
    height: 5rem;
    width: 5rem;
    left: -5rem;
    top: 0.5rem;
}

.page#validate-words .page-body {
    display: flex;
    flex-direction: column;
    padding-bottom: 1rem;
}

.page#recovery-words {
    height: 70.5rem; /* 564px */
}

.page#recovery-words .page-body {
    display: flex;
    flex-direction: column;
    padding-top: 0;
    padding-bottom: 0;
}

.page#recovery-words .recovery-words {
    height: 39rem;
    margin: 0;
    position: relative;
    margin: -4rem;
    padding: 4rem 3rem;
    -webkit-mask-image: linear-gradient(0deg , rgba(255,255,255,0), rgba(255,255,255, 1) 4rem, rgba(255,255,255,1) calc(100% - 4rem), rgba(255,255,255,0));
    mask-image: linear-gradient(0deg , rgba(255,255,255,0), rgba(255,255,255, 1) 4rem, rgba(255,255,255,1) calc(100% - 4rem), rgba(255,255,255,0));
}

@media (max-width: 450px) { /* break point used in @nimiq/style/layout.css for .nq-card-body padding */
    .page#recovery-words .recovery-words {
        margin-left: -3rem;
        margin-right: -3rem;
    }
}

.page#recovery-words .page-footer p {
    position: absolute;
    bottom: 4rem;
    text-align: center;
    width: calc(100% - 2rem);
    opacity: 0.5;
    color: white;
    transition: opacity .2s ease, z-index 0s .2s;
}

.page#recovery-words .page-footer.scrolled-down p {
    z-index: -1;
    opacity: 0;
}

.page#recovery-words .page-footer button {
    z-index: -1;
    position: relative;
    opacity: 0;
    transition: transform 450ms cubic-bezier(.25,0,0,1), box-shadow 450ms cubic-bezier(.25,0,0,1), opacity .4s ease;
}

.page#recovery-words .page-footer.scrolled-down button {
    z-index: 1;
    opacity: 1;
}

.page#recovery-words-intro .nq-card-body {
    padding-bottom: 0;
    padding-top: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.page#recovery-words-intro li > .nq-icon {
    color: var(--nimiq-orange);
}

.page#login-file-unlock .nq-card-body,
.page#recovery-words-unlock .nq-card-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

.page#login-file-unlock .nq-card-body .nq-icon,
.page#recovery-words-unlock .nq-card-body .nq-icon {
    width: 8rem;
    height: auto;
    opacity: 0.3;
}

.page#login-file-intro .nq-card-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 0;
    justify-content: space-evenly;
}

.page#login-file-intro .page-body .nq-notice.warning {
    text-align: center;
    margin-top: 0;
}

.page#login-file-intro li > .nq-icon {
    opacity: 0.3;
}

.page#login-file-set-password:not(.repeat-password) .nq-h1.repeat,
.page#login-file-set-password.repeat-password .nq-h1:not(.repeat) {
    display: none;
}

.page#login-file-set-password .page-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

.page#login-file-download .page-body {
    display: flex;
    flex-direction: column;
    padding-bottom: 3rem;
}

.page#login-file-download img {
    display: flex;
    transition: filter .6s, opacity .6s;
    opacity: .15;
    -webkit-filter: blur(20px);
    -moz-filter: blur(20px);
    -o-filter: blur(20px);
    -ms-filter: blur(20px);
    filter: blur(20px);
}

.page#recovery-words .page-header .warning,
.page#recovery-words .words-container {
    transition: filter .6s, opacity .6s;
    opacity: .4;
    -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -o-filter: blur(10px);
    -ms-filter: blur(10px);
    filter: blur(10px);
}

.page#recovery-words .recovery-words {
    overflow: hidden;
}

.page#login-file-download:target img,
.page#recovery-words:target .page-header .warning,
.page#recovery-words:target .words-container  {
    opacity: 1;
    -webkit-filter: blur(0px);
    -moz-filter: blur(0px);
    -o-filter: blur(0px);
    -ms-filter: blur(0px);
    filter: blur(0px);
}

.page#recovery-words:target .recovery-words {
    overflow: hidden scroll;
}

.page#login-file-unlock:target ~ .page#login-file-download,
.page#login-file-success:target ~ .page#login-file-download,
.page#recovery-words-intro:target ~ .page#login-file-download,
.page#recovery-words-unlock:target ~ .page#recovery-words {
    display: flex;
}

.page#recovery-words .page-header h1,
.page#recovery-words .page-footer,
.page#recovery-words .page-header .progress-indicator,
.page#recovery-words .page-header .page-header-back-button,
.page#login-file-download .page-header,
.page#login-file-download button {
    opacity: 0;
}

.page#recovery-words:target .page-header h1,
.page#recovery-words:target .page-footer,
.page#recovery-words:target .page-header .progress-indicator,
.page#recovery-words:target .page-header .page-header-back-button,
.page#login-file-download:target .page-header,
.page#login-file-download:target button {
    opacity: 1;
}

.page#login-file-unlock,
.page#login-file-success,
.page#recovery-words-unlock {
    background-image: none;
    background-color: rgb( 255, 255, 255, .0); /* transparent white */
}

.page#login-file-success {
    opacity: 0;
    transition: opacity .3s .1s ease;
}

.page#login-file-success:target {
    opacity: 1;
}

.page#login-file-success .page-body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.page#login-file-success ul {
    list-style-type: none;
    font-size: 3rem;
    line-height: 7rem;
    font-weight: 600;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    justify-content: center;
    color: rgba(31, 35, 72, .4); /* based on --nimiq-blue */
}

.page#login-file-success .bullet-point {
    display: inline-block;
    width: 3rem;
    position: relative;
}

.page#login-file-success .page-header-back-button {
    left: auto;
    right: 2rem;
    top: 2rem;
    height: 3rem;
    padding: 0;
    opacity: 1;
}

.page#login-file-success .page-header-back-button .nq-icon {
    opacity: .2;
    transition: opacity .3s cubic-bezier(0.25, 0, 0, 1);
}

.page#login-file-success .page-header-back-button:hover,
.page#login-file-success .page-header-back-button:active,
.page#login-file-success .page-header-back-button:focus {
    transform: none;
}

.page#login-file-success .page-header-back-button:hover .nq-icon,
.page#login-file-success .page-header-back-button:active .nq-icon,
.page#login-file-success .page-header-back-button:focus .nq-icon {
    opacity: .4;
}

.page#login-file-success .bullet-point::before {
    content: '\25cf';
    position: absolute;
    top: -1.5rem;
    left: 1rem;
    font-size: 1.5rem;
}

.page#login-file-success h1 {
    margin: 0;
}

.page#login-file-success p {
    text-align: center;
}

